# dotfiles

./: ._vimrc  .gitignore  .gitmodules  .vimrc  README.md  TODO.md  Xresources  _.swp  bash_profile  bashrc  console.xml  cure.sh  cure.sh~  example  furnish.sh  ghci  gitconfig  gitignore  go  infect.sh  infect.sh~  notes.txt  nvimrc  putes.sh  screenrc  setup.sh  svimrc  tmux.conf  vimrc  vimrc~  xinitrc
aux/fonts/: fonts.scale
bin-darwin/: gfzf
bin-linux/: gfzf  xlaunch  xtermdo
boilerplate/: py.nix  std.tex
cetera/: garbage.txt  notes.txt  osxterm.terminal
config/bash/: bash_profile  bash_profile.linox  bash_profile.macos  bash_profile.macos.unpriv  bash_profile.nixos  bashrc  darwin-env.sh  nix.bash
config/bash/fzf/: update-fzf-util.sh  updateFzfUtil  updateFzfUtil.sh
config/darwin/: README  env.sh  my.env.plist  my.env.plist.2  reload.sh  setup.sh  solarized.terminal  update_plist.sh
config/firefox/: user.js
config/git/: config  gitconfig  gitignore_global  ignore
config/interpreters/: ghci
config/mitmproxy/: common.conf
config/multiplexers/: screenrc  tmux.conf  tmux.macos.conf  tmux.osx.conf  tmux.other.conf
config/mutt/: muttrc
config/nix/: config.nix  default.nix
config/nix/lists/: 520.nix  carve_mac.nix  core.nix  current.nix  extra.nix  full.nix  hp.nix  hs.nix  huge.nix  keep.txt  linux.nix  math.nix  min.nix  pp.nix  sec.nix  t520.nix
config/nix/nixos/: bigvb.nix  common.nix  datrium.nix  graphical.nix  kernel_hacking.nix  littlevb.nix  shitty_t520.nix  t520.nix  wm_dev.nix
config/nix/pkgs/: config.nix  darwin-env.nix  (+1 more)
config/openbox/: rc.xml
config/sh/: current.sh  env.sh  files.sh  lang.sh  misc.sh  mux.sh  nix.sh  proc.sh  vc.sh
config/tint2/: tint2rc
config/vim/: README.md  TODO.md  goovimrc  gvimrc  junk  vimrc
config/x11/: Xmodmap  misc_config.sh  prewm.sh  xmobarrc  xmonad.hs
config/xfrills/: batt  stalonetrayrc  wifi  xmobar_bottom  xmobar_top  xmobarrc
config/xmobar/: batt.kevin.sh  wifi  wireless.sh  xmobar_bottom  xmobarrc  xmobarrc.kevin  xmobarrc.vm
config/xmonad/: Main.hs  default.nix  laptop.hs  shell.nix  xmonad-config.cabal  xmonad.hs
config/xmonad/big/: README.md  default.nix  shell.nix  xmonad-config.cabal
config/xmonad/big/src/: Minibar.hs
config/xmonad/big/src/Minibar/: Components.hs  LOT.hs
config/xmonad/big/src/XMonad/Me/: Colors.hs  PopUp.hs  Space.hs  Terminal.hs
config/xmonad/data/: statusbar.sh
config/xmonad/src/: Minibar.hs
config/xmonad/src/Control/: Variable.hs
config/xmonad/src/Data/: Colors.hs  LOT.hs
config/xmonad/src/Minibar/: Actors.hs  Components.hs  My.hs  Terminal.hs  Variable.hs
config/xmonad/src/System/Posix/: LockedFd.hs
config/xmonad/src/XMonad/: Me.hs
config/xmonad/src/XMonad/Config/: Uration.hs
config/xmonad/src/XMonad/Layout/: Gap.hs  My.hs
config/xmonad/src/XMonad/Me/: Gap.hs  LockedFd.hs  PopUp.hs  StatusBar.hs  Terminal.hs
config/xmonad/src/XMonad/Util/: PopUp.hs  StatusBar.hs  Terminal.hs
config/xmonad/test/: Test.hs
core/: .screenrc  .vimrc  bash_profile  bashrc  gitconfig  gitignore_global  gvimrc  vimrc
core/base/: gitconfig  vimrc
core/extra/: Xresources  tmux.conf  xinitrc
core/vim/: vim
darwin/: env.head  env.sh  my.env.plist  setup.sh  update_plist.sh  vars.txt
etc/junk/: xinitrc
extra/xmonad/: xmonad.hs
home/: Xresources  bashrc  vimrc  xinitrc
home/xmonad/: xmonad  xmonad.hs
homedir/: putes.sh  setup.sh
homedir/aux/: gitignore_global
homedir/core/: bash_profile  bashrc  gitconfig  gvimrc  tmux.conf  vimrc
nix/: README.md  config.nix  configuration.nix  default.nix  laptop.nix  nixos-pkgs.nix  nixpkgs-config.nix  pkgs.nix
nix-config/: Xmodmap  Xresources  laptop.nix  sessionCommands.sh
nix/env/: default.nix  paths-to-link.nix
nix/lib/: default.nix
nix/module/: default.nix
nix/modules/: default.nix
nix/nixos/: config.nix  result  thinkpad.nix
nix/overlay/: default.nix
nix/path/: nixos-pkgs.nix  nixos.nix  pkgs.nix
nix/pkgs/: config.nix  darwin-env.nix  default.nix  env.nix  np.macos.nix  np.nixos.nix  overlay.nix  overlays.nix  overrides.nix
notes/: audio.txt  cabal-hell.md  dual-xrandr.sh  dual_xrandr.sh  misc.md  slackware.md  thinkpad.md  tmux-local-install.sh  tmux_local_install.sh  urxvtdo.c
notes/junk/: xinitrc
notes/scripts/: gfzf.darwin  gfzf.linux  withpty
notes/thinkpad/: man_wpa_conf.txt  wpa_command.txt  wpa_supplicant.conf
rest/: configuration.nix
scripts/: colo  installPlugins  links.txt  mike  nixos  setup  setup.sh  vimNixosSetup  vimNixosSetup.sh
setup/: bootstrap-macos-unpriv.sh  bootstrap-macos.sh  bootstrap-nixos.sh  bootstrap.sh  carve  fragments.nix  go  goobuntu  goog  headless  macos  macos-no-git  mike  mklinks  mklinks.sh  nixos  perms.sh  thacker  vars-common.sh  vars-macos.sh  vars-nixos.sh  weitz
share/applications/: xstuff.desktop
src/: bash_profile  bashrc  tmux.conf
src/git/: gitconfig  gitignore_global
src/interpreters/: bash_profile  bashrc  ghci
src/local-nix/: default.nix  test.nix
src/misc-scripts/: tmex.py
src/multiplexers/: screenrc  tmux.conf
src/nix/: README.md  config.nix
src/nix-config/: common.nix  config.nix  datrium.nix  laptop.nix  max.nix  old+shitty.nix  virtualbox.nix  vm.nix  vmware.nix
src/vc/: gitconfig  gitignore_global
src/vim/: gvimrc
src/vim-config/: TODO.md  plugins.txt  updateNix  updatePlugins  vimrc  wat
src/x11/: Xmodmap  Xmodmap_mike  Xresources  Xresources.xterm  old+shitty.sh  pre-wm.sh  prewm.sh  xmobarrc  xmonad.hs
store/junk/: goodconf.nix
vim/: vim
vim/colors/: nicebox.vim
xmonad/: xmonad.hs
(+481 files in other folders)
