name:                xmonad-config
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable xmonad
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base
                     , xmonad-config

library

  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:     XMonad.Config.Uration

  other-modules:       XMonad.Util.StatusBar
                     , XMonad.Util.PopUp
                     , XMonad.Util.Terminal
                     , Control.Variable
                     , Data.LOT
                     , Minibar
                     , Minibar.My
                     , Minibar.Actors
                     , System.Posix.LockedFd

  build-depends:       base >=4.8 && <4.9
                     , ansi-terminal
                     , containers >=0.5 && <0.6
                     , mtl
                     , process
                     , stm
                     , terminal-size
                     , text
                     , unix
                     , X11
                     , xmonad
                     , xmonad-contrib
