name:                xmonad-config
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Flag laptop
  Description:  Build status-bar with wifi and battery info
  Default:      False


executable xmonad
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base
                     , xmonad-config

library

  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(laptop)
    cpp-options: -DLAPTOP

  exposed-modules:     XMonad.Config.Uration

  other-modules:       XMonad.Util.StatusBar
                     , XMonad.Util.PopUp
                     , XMonad.Util.Terminal
                     , Control.Variable
                     , Data.LOT
                     , Minibar
                     , Minibar.My
                     , Minibar.Actors
                     , System.Posix.LockedFd
                     , Data.Colors

  build-depends:       base
                     , bytestring
                     , ansi-terminal
                     , containers
                     , transformers
                     , mtl
                     , process
                     , stm
                     , terminal-size
                     , text
                     , unix
                     , X11
                     , xmonad
                     , xmonad-contrib
                     , attoparsec
