name:                xmonad-config
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library

  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:     XMonad.Me.Colors
                     , XMonad.Me.Space
                     , XMonad.Me.Terminal
                     , XMonad.Me.StatusBar
                     , XMonad.Me.PopUp
                     , Minibar
                     , Minibar.Actors
                     , Minibar.Components
                     , Minibar.LOT
                     , Minibar.Variable

  build-depends:       base
                     , bytestring
                     , ansi-terminal
                     , containers
                     , transformers
                     , mtl
                     , process
                     , stm
                     , terminal-size
                     , text
                     , unix
                     , X11
                     , xmonad
                     , xmonad-contrib
                     , attoparsec
